name:                persistent-test
version:             0.1.0.0
license-file:        LICENSE
author:              Dan Lien
maintainer:          dan@danclien.com
build-type:          Simple
cabal-version:       >=1.10

executable broken
  main-is:             Broken.hs
  other-modules:       Models
  build-depends:       base >=4.7 && <4.8
                     , transformers
                     , persistent
                     , persistent-sqlite
                     , persistent-template                     
  default-language:    Haskell2010  


executable works
  main-is:             Works.hs
  build-depends:       base >=4.7 && <4.8
                     , transformers
                     , persistent
                     , persistent-sqlite
                     , persistent-template
  default-language:    Haskell2010    